--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Bloco/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Bloco/Edit.cshtml
@@ -19,18 +19,19 @@
                             <div class="form-group" hidden>
                                 <input asp-for="Id" class="form-control" />
                             </div>
-                            <div class="form-group col-md-7" id="ListElements">
-                                <label asp-for="OrganizacaoId" class="control-label"></label>
+                            <div class="form-group col-md-5" id="ListElements">
+                                <label asp-for="OrganizacaoId" class="control-label">Organização</label>
                                 @Html.DropDownListFor(model => model.OrganizacaoId, ViewBag.OrgList as SelectList, new
-                                { @class = "form-control" })
+                                    { @class = "form-control" })
                                 <span asp-validation-for="OrganizacaoId" class="text-danger"></span>
                             </div>
-                            <div class="form-group col-md-4">
-                                <label asp-for="Titulo" class="control-label"></label>
-                                <input asp-for="Titulo" class="form-control" />
-                                <span asp-validation-for="Titulo" class="text-danger"></span>
+                            <div class="col-md-7">
+                                <div class="form-group">
+                                    <label asp-for="Titulo" class="control-label"></label>
+                                    <textarea asp-for="Titulo" class="form-control" maxlength="100" rows="2" style="width: 80%;"></textarea>
+                                    <span asp-validation-for="Titulo" class="text-danger"></span>
+                                </div>
                             </div>
-
                         </div>
                         <div class="card-footer">
                             <div class=" col-md-4">
@@ -64,5 +65,7 @@ else if (TempData["mensagemErro"] != null)
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="~/js/sweet-alert.js"></script>
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
