--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Create.cshtml
@@ -40,10 +40,12 @@
                                     </select>
                                     <span asp-validation-for="Sala.BlocoId" class="text-danger"></span>
                                 </div>
-                                <div class="form-group col-md-4">
-                                    <label asp-for="Sala.Titulo" class="control-label"></label>
-                                    <input asp-for="Sala.Titulo" class="form-control" />
-                                    <span asp-validation-for="Sala.Titulo" class="text-danger"></span>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                        <label asp-for="Sala.Titulo" class="control-label">Título</label>
+                                        <textarea asp-for="Sala.Titulo" class="form-control" maxlength="100" rows="2" style="width: 80%;"></textarea>
+                                        <span asp-validation-for="Sala.Titulo" class="text-danger"></span>
+                                    </div>
                                 </div>
                             </div>
 
