--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Edit.cshtml
@@ -17,8 +17,7 @@
                         <div class="card-body">
 
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="col-md-8">
-
+                            <div class="col-md-11">
                                 <div class="form-group col-md-7">
                                     <label class="control-label">Selecione a Organização</label>
                                     <select class="form-control" asp-for="OrganizacaoId" id="select-organizacao" onchange="loadBlocos()">
@@ -39,10 +38,12 @@
                                     </select>
                                     <span asp-validation-for="Sala.BlocoId" class="text-danger"></span>
                                 </div>
-                                <div class="form-group col-md-4">
-                                    <label asp-for="Sala.Titulo" class="control-label"></label>
-                                    <input asp-for="Sala.Titulo" class="form-control" />
-                                    <span asp-validation-for="Sala.Titulo" class="text-danger"></span>
+                                <div class="col-md-9">
+                                    <div class="form-group">
+                                        <label asp-for="Sala.Titulo" class="control-label">Título</label>
+                                        <textarea asp-for="Sala.Titulo" class="form-control" maxlength="100" rows="2" style="width: 80%;"></textarea>
+                                        <span asp-validation-for="Sala.Titulo" class="text-danger"></span>
+                                    </div>
                                 </div>
                                 <div class="form-group" hidden>
                                     <input asp-for="Sala.Id" class="form-control" />
