--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Sala/Edit.cshtml
@@ -41,7 +41,7 @@
                                 <div class="col-md-9">
                                     <div class="form-group">
                                         <label asp-for="Sala.Titulo" class="control-label">Título</label>
-                                        <textarea asp-for="Sala.Titulo" class="form-control" maxlength="100" rows="2" style="width: 80%;"></textarea>
+                                        <textarea asp-for="Sala.Titulo" class="form-control" maxlength="100" rows="2" style="width: 43.5%;resize:none"></textarea>
                                         <span asp-validation-for="Sala.Titulo" class="text-danger"></span>
                                     </div>
                                 </div>
