--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Bloco/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Bloco/Create.cshtml
@@ -27,7 +27,7 @@
                             <div class="col-md-7">
                                 <div class="form-group">
                                     <label asp-for="Titulo" class="control-label"></label>
-                                    <textarea asp-for="Titulo" class="form-control" maxlength="100" rows="2" style="width: 80%;"></textarea>
+                                    <textarea asp-for="Titulo" class="form-control" maxlength="100" rows="2" style="width: 80%;resize:none"></textarea>
                                     <span asp-validation-for="Titulo" class="text-danger"></span>
                                 </div>
                             </div>
