--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/SalaParticular/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/SalaParticular/Details.cshtml
@@ -15,18 +15,12 @@
 
                     <div class="card-body">
                         <div class="col-md-10">
-                            <dl class="dl-horizontal">
-                                <dt>
-                                    @Html.DisplayNameFor(model => model.Id)
-                                </dt>
-                                <dd>
-                                    <p class="form-control">@Html.DisplayFor(model => model.Id)</p>
-                                </dd>
+                            <dl class="dl-horizontal">                             
                                 <dt>
                                     @Html.DisplayNameFor(model => model.Responsavel)
                                 </dt>
                                 <dd>
-                                    <p class="form-control"> @Html.DisplayFor(model => model.Responsavel.Cpf) | @Html.DisplayFor(model => model.Responsavel.Nome)</p>
+                                    <p class="form-control"> @Html.DisplayFor(model => model.Responsavel.Nome)</p>
                                 </dd>
                                 <dt>
                                     @Html.DisplayNameFor(model => model.SalaId)
