--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Details.cshtml
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="@Url.Action("Edit", "Planjemaneto", new { id = @Model.Id })" class="btn btn-info"> Editar </a> |
+                        <a href="@Url.Action("Edit", "Planejamento", new { id = @Model.Id })" class="btn btn-info"> Editar </a> |
                         <a class="btn btn-primary" asp-action="Index">Voltar</a>
                     </div>
                 </div>
