--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/SalaParticular/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/SalaParticular/Details.cshtml
@@ -28,6 +28,12 @@
                                 <dd>
                                     <p class="form-control"> @Html.DisplayFor(model => model.SalaId.Titulo)</p>
                                 </dd>
+                                <dt>
+                                   Bloco
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.SalaId.BlocoTitulo)</p>
+                                </dd>
                             </dl>
                         </div>
                     </div>
