--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Details";
 }
+
 <section class="content">
     <div class="container-fluid">
         <div class="row">
@@ -14,7 +15,19 @@
 
                     <div class="card-body">
                         <div class="col-md-10">
-                            <dl class="dl-horizontal">                              
+                            <dl class="dl-horizontal">    
+                                <dt>
+                                    Sala
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.SalaId.Titulo)</p>
+                                </dd>
+                                <dt>
+                                    Bloco
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.SalaId.BlocoTitulo)</p>
+                                </dd>
                                 <dt>
                                     @Html.DisplayNameFor(model => model.Periodo)
                                 </dt>
